xee-xpath-outer/tests/snapshots/xpath__arith_empty_sequence_right.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 + ()\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
