xee-xpath-outer/tests/snapshots/xpath__atomize_xml_attribute_eq_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a f=\"FOO\"/><b f=\"BAR\"/></doc>\"#, \"doc/a/@f eq doc/b/@f\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
