xee-xpath-outer/tests/snapshots/xpath__atomize_xml_attribute_present.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a f=\"FOO\"/></doc>\"#, \"doc/a/@f eq 'FOO'\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
