xee-xpath-outer/tests/snapshots/xpath__attribute_namespace_no_default.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml_default_ns(r#\"<doc xmlns=\"http://example.com\" a=\"hello\"/>\"#,\n    \"doc / @a / local-name()\", \"http://example.com\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "a",
                ),
            ),
        ),
    },
)
