xee-xpath-outer/tests/snapshots/xpath__case_as_any_uri.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'http://example.com' cast as xs:anyURI\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    AnyURI,
                    "http://example.com",
                ),
            ),
        ),
    },
)
