xee-xpath-outer/tests/snapshots/xpath__case_as_hex_binary_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'f' cast as xs:hexBinary\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: SourceSpan(
            0,
            24,
        ),
    },
)
