xee-xpath-outer/tests/snapshots/xpath__cast_as_name_with_colon.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo:bar' cast as xs:Name\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    Name,
                    "foo:bar",
                ),
            ),
        ),
    },
)
