xee-xpath-outer/tests/snapshots/xpath__cast_as_normalized_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo\\nbar' cast as xs:normalizedString\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    NormalizedString,
                    "foo bar",
                ),
            ),
        ),
    },
)
