xee-xpath-outer/tests/snapshots/xpath__cast_date_time_millis_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('2019-01-03T15:14:30.125' cast as xs:dateTime) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "2019-01-03T15:14:30.125",
                ),
            ),
        ),
    },
)
